# docs/swagger/swagger.yaml
@@ -358,30 +358,6 @@ paths: # TODO 変数の命名を確認する
                 $ref: "#/components/schemas/TraqGroups"
         "500":
           description: グループ一覧を正常に取得できませんでした
-  /traq/groups/{traqGroupID}/members:
-    get:
-      operationId: getTraqGroupMembers
-      tags:
-        - traq
-      description: 指定したtraQグループのメンバー一覧を取得します。
-      parameters:
-        - name: traqGroupID
-          in: path
-          required: true
-          description: traQグループID
-          schema:
-            type: string
-      responses:
-        "200":
-          description: 正常に取得できました。メンバーの配列を返します。
-          content:
-            application/json:
-              schema:
-                $ref: "#/components/schemas/TraqUserGroupMembers"
-        "404":
-          description: traQグループが存在しません
-        "500":
-          description: メンバー一覧を正常に取得できませんでした
   /traq/stamps:
     get:
       operationId: getTraqStamps
